--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/risingus/Little-Invest/tree/master/src/views" />
+<meta http-equiv="refresh" content="0; url=https://github.com/risingus/Little-Invest/tree/master/src/views/index.html" />
