--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/risingus/Little-Invest/tree/master/src/views/index.html" />
+<meta http-equiv="refresh" content="0; url=https://github.com/risingus/Little-Invest/blob/master/src/views/index.html" />
+<link rel="canonical" href="https://github.com/risingus/Little-Invest/blob/master/src/views/index.html">
