--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/risingus/Little-Invest/blob/master/src/views/index.html" />
+<meta http-equiv="refresh" content="0; url=https://risingus.github.io/Little-Invest/views/index.html" />
