1. Removendo servidor express e ajustando arquivos para gitpages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LittleInvest | Sua plaforma investimentos online</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styleMain.css">
+    <link rel="stylesheet" href="/public/styles/styleMain.css">
     
     <title>Little Invest</title>
 </head>
@@ -15,7 +15,7 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <img src="rsc/img/logo-little-invest.png" alt="logo-little-invest" class="logo">
+        <img src="/public/rsc/img/logo-little-invest.png" alt="logo-little-invest" class="logo">
             <ul class="menu" id="js-menu">
                 <li><a href="" class="menu-links">Investimentos</a></li>
                 <li><a href="" class="menu-links">Serviços</a></li>
@@ -29,7 +29,7 @@
             <h1>Planeje o seu futuro<br> sem perder tempo<br> no presente</h1>
             <button>Investir agora</button>
         </div>
-        <img src="rsc/img/invest-now-img.png" alt="imagem">
+        <img src="public/rsc/img/invest-now-img.png" alt="imagem">
     </div>
 
     <div class="banks">
@@ -38,43 +38,43 @@
             <p class="text-proffits">110% CDB</p>
             <hr class="line">
             <p class="text-bank">Banco Certo</p>
-            <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
+            <button>Adicionar <img src="public/rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCI 2020/01</p>
             <p class="text-proffits">115% CDB</p>
             <hr class="line">
             <p class="text-bank">Santrafe</p>
-            <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
+            <button>Adicionar <img src="public/rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCA 2022/06</p>
             <p class="text-proffits">117% CDB</p>
             <hr class="line">
             <p class="text-bank">Banco Inova</p>
-            <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
+            <button>Adicionar <img src="public/rsc/img/add button.png" alt="Add button"></button>
         </section>
         <section class="proffits">
             <p>LCI 2018/07</p>
             <p class="text-proffits">122% CDB</p>
             <hr class="line">
             <p class="text-bank">Cofre Agora</p>
-            <button>Adicionar <img src="rsc/img/add button.png" alt="Add button"></button>
+            <button>Adicionar <img src="public/rsc/img/add button.png" alt="Add button"></button>
         </section>
     </div>
 
     <div class="contact">
         <h1>Mais fácil que gastar dinheiro</h1>
         <div class="contact-img">
-            <img src="/rsc/img/Acesso online.png" alt="Acesso online">
-            <img src="/rsc/img/rendimento facil.png" alt="">
-            <img src="/rsc/img/resgate simples.png" alt="">
+            <img src="public/rsc/img/Acesso online.png" alt="Acesso online">
+            <img src="public/rsc/img/rendimento facil.png" alt="">
+            <img src="public/rsc/img/resgate simples.png" alt="">
         </div>
         <button>Entre em contato</button>
     </div>
 
     <div class="testimony">
-        <img src="/rsc/img/testimony.png" alt="">
+        <img src="public/rsc/img/testimony.png" alt="">
     </div>
 
     <div class="account">
@@ -96,7 +96,7 @@
         </form>
 
         <div class="support">
-            <img src="/rsc/img/online-suport.png" alt="Suporte online 24h">
+            <img src="public/rsc/img/online-suport.png" alt="Suporte online 24h">
             <p>Ajuda 24h do nosso Suporte Online</p>
         </div>
         
@@ -119,10 +119,10 @@
 
         <div class="social">
             <h1>REDES SOCIAIS</h1>
-            <a href="https://www.facebook.com/gustavo.lima.961556/" target=_blank> <img src="rsc/img/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/login?lang=pt" target=_blank> <img src="rsc/img/twitter.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/risin.gus/" target=_blank> <img src="rsc/img/instagram.png" alt="Instagram"></a>
-            <a href="https://www.youtube.com/" target=_blank> <img src="rsc/img/youtube.png" alt="Youtube"></a>
+            <a href="https://www.facebook.com/gustavo.lima.961556/" target=_blank> <img src="public/rsc/img/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/login?lang=pt" target=_blank> <img src="public/rsc/img/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/risin.gus/" target=_blank> <img src="public/rsc/img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.youtube.com/" target=_blank> <img src="public/rsc/img/youtube.png" alt="Youtube"></a>
         </div>
 
         <div class="about">
