ajustando busca de arquivos para gitpages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LittleInvest | Sua plaforma investimentos online</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/styleMain.css">
+    <link rel="stylesheet" href="public/styles/styleMain.css">
     
     <title>Little Invest</title>
 </head>
@@ -15,7 +15,7 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <img src="/public/rsc/img/logo-little-invest.png" alt="logo-little-invest" class="logo">
+        <img src="public/rsc/img/logo-little-invest.png" alt="logo-little-invest" class="logo">
             <ul class="menu" id="js-menu">
                 <li><a href="" class="menu-links">Investimentos</a></li>
                 <li><a href="" class="menu-links">Serviços</a></li>
